# winn

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  winn.Rproj
R/: winn-package.R  winn.R
man/: adjust_outliers_mad.Rd  anova_batch_correction.Rd  anova_plate_correction.Rd  anova_test.Rd  autocorrelation_correct.Rd  combat_batch_correction.Rd  combat_plate_correction.Rd  normalize_by_dilution_factor.Rd  residualize_by_plate_with_anova.Rd  scale_by_batch.Rd  scale_by_plate.Rd  winn-package.Rd  winn.Rd
notebooks/: winn_comparison.Rmd  winn_comparison.nb.html
notebooks/statTarget/shiftCor/After_shiftCor/: shift_QC_cor.csv  shift_all_cor.csv  shift_sample_cor.csv
notebooks/statTarget/shiftCor/Before_shiftCor/: shift_QC_raw.csv  shift_sam_raw.csv
notebooks/statTarget/shiftCor/RSDresult/: RSD_all.csv  RSDdist_QC_stat.csv
tests/: testthat.R
tests/testthat/: test-winn.R
vignettes/: winn_tutorial.Rmd
winnpy/: .gitignore  README.md  drift.py  pyproject.toml  scale.py  winn.py
winnpy/scripts/: run_winn_package.py
winnpy/scripts/results/: cv_all_data.csv  cv_combined_data.csv  cv_control_data.csv  sample_metadata.csv
winnpy/src/winnpy/: __init__.py  autoparams.py  batch.py  cli.py  drift.py  median_adjust.py  outlier.py  utils.py  winn.py
