[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winnpy"
version = "0.1.0"
description = "WINN: metabolomics correction pipeline (Python port)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YiRui", email = "your_email@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "openpyxl>=3.1"          
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
combat   = ["combat>=0.3"]
ruptures = ["ruptures>=1.1.9"]
dev      = ["pytest>=7", "build>=1.0", "twine>=4.0"]

[project.scripts]
winnpy-run = "winnpy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"winnpy" = ["configs/*.yaml"]
